--- a/order-ms/pom.xml
+++ b/order-ms/pom.xml
@@ -31,6 +31,13 @@
             <artifactId>event-driven-dps</artifactId>
             <version>${event-driven-dps.version}</version>
         </dependency>
+
+    <dependency>
+        <groupId>org.mengyun</groupId>
+        <artifactId>tcc-transaction-spring</artifactId>
+        <version>1.2.4.16</version>
+    </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
@@ -71,6 +78,11 @@
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.2</version>
         </dependency>
 
     </dependencies>
