--- a/order-ms/src/main/resources/application.properties
+++ b/order-ms/src/main/resources/application.properties
@@ -1,20 +1,1 @@
-## master Êý¾ÝÔ´ÅäÖÃ
-master.datasource.url=jdbc:mysql://rm-uf64h3g1yat0070cvo.mysql.rds.aliyuncs.com/order?useLegacyDatetimeCode=false&serverTimezone=Asia/Hong_Kong&useSSL=false&?createDatabaseIfNotExist=true
-master.datasource.username=root
-master.datasource.password=!yumama666
-master.datasource.driverClassName=com.mysql.jdbc.Driver
-
-
-
-## tccDataSource Êý¾ÝÔ´ÅäÖÃ
-tccDataSource.datasource.url=jdbc:mysql://rm-uf64h3g1yat0070cvo.mysql.rds.aliyuncs.com:3306/TCC?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-tccDataSource.datasource.username=root
-tccDataSource.datasource.password=!yumama666
-tccDataSource.datasource.driverClassName=com.mysql.jdbc.Driver
-
-
-## tccDataSource Êý¾ÝÔ´ÅäÖÃ
-orderTccDataSource.datasource.url=jdbc:mysql://rm-uf64h3g1yat0070cvo.mysql.rds.aliyuncs.com:3306/TCC_ORD?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-orderTccDataSource.datasource.username=root
-orderTccDataSource.datasource.password=!yumama666
-orderTccDataSource.datasource.driverClassName=com.mysql.jdbc.Driver
+## master ï¿½ï¿½ï¿½ï¿½Ô´ï¿½ï¿½ï¿½ï¿½master.datasource.url=jdbc:mysql://rm-uf64h3g1yat0070cvo.mysql.rds.aliyuncs.com/order?useLegacyDatetimeCode=false&serverTimezone=Asia/Hong_Kong&useSSL=false&?createDatabaseIfNotExist=truemaster.datasource.username=rootmaster.datasource.password=!yumama666master.datasource.driverClassName=com.mysql.jdbc.Driver## tccDataSource ï¿½ï¿½ï¿½ï¿½Ô´ï¿½ï¿½ï¿½ï¿½tccDataSource.datasource.url=jdbc:mysql://rm-uf64h3g1yat0070cvo.mysql.rds.aliyuncs.com:3306/TCC?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=truetccDataSource.datasource.username=roottccDataSource.datasource.password=!yumama666tccDataSource.datasource.driverClassName=com.mysql.jdbc.Driver## tccDataSource ï¿½ï¿½ï¿½ï¿½Ô´ï¿½ï¿½ï¿½ï¿½orderTccDataSource.datasource.url=jdbc:mysql://rm-uf64h3g1yat0070cvo.mysql.rds.aliyuncs.com:3306/TCC_ORD?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=trueorderTccDataSource.datasource.username=rootorderTccDataSource.datasource.password=!yumama666orderTccDataSource.datasource.driverClassName=com.mysql.jdbc.Driver
