--- a/order-ms/pom.xml
+++ b/order-ms/pom.xml
@@ -32,12 +32,6 @@
             <version>${event-driven-dps.version}</version>
         </dependency>
 
-    <dependency>
-        <groupId>org.mengyun</groupId>
-        <artifactId>tcc-transaction-spring</artifactId>
-        <version>1.2.4.17</version>
-    </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
@@ -50,6 +44,13 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-hystrix</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-feign</artifactId>
